--- a/QuickQuestions/app/src/main/res/values/strings.xml
+++ b/QuickQuestions/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Quick Questions</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password">Password</string>
+    <string name="re_password">Re-Password</string>
+    <string name="e_mail">E-mail</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="quick_questions">Quick Questions</string>
+    <string name="sign_in">Sign in</string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
