--- a/QuickQuestions/app/src/main/res/values/strings.xml
+++ b/QuickQuestions/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="quick_questions">Quick Questions</string>
     <string name="sign_in">Sign in</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="welcome">Welcome</string>
 </resources>
