Strings extracted and unnecessary strings deleted

--- a/QuickQuestions/app/src/main/res/values/strings.xml
+++ b/QuickQuestions/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="sign_in">Sign in</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="welcome">Welcome</string>
+    <string name="start">Start</string>
+    <string name="top_quizzes">Top Quizzes</string>
 </resources>
