--- a/QuickQuestions/app/src/main/res/values/strings.xml
+++ b/QuickQuestions/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="email_information">Email information must be true</string>
     <string name="cannot_empty">This field cannot be empty</string>
     <string name="fix_errors">You have to fix the Errors</string>
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
